# discord-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  .test_env  README.md  log.txt  pyproject.toml
.github/workflows/: linting.yaml
LICENSE-THIRD-PARTY/: taskipy
bot/: __init__.py  __main__.py  bot.py  constants.py  injectors.py  paginator.py  spy.py  types.py  utils.py
bot/cogs/: inactive.py  internal.py  leaderboard.py  liveDetection.py  role_info.py  twitch.py
bot/modules/: admin.py  birthday.py  internal.py  leaderboard.py  live_detection.py  role_info.py  status.py  twitch.py
typings/motor/: __init__.pyi  core.pyi  docstrings.pyi  metaprogramming.pyi  motor_asyncio.pyi  motor_gridfs.pyi  motor_tornado.pyi  web.pyi
typings/motor/aiohttp/: __init__.pyi
typings/motor/frameworks/asyncio/: __init__.pyi
typings/motor/frameworks/tornado/: __init__.pyi
